[package]
name = "jetstream-client-example"
version = "0.1.0"
edition = "2021"
description = "Standalone example for connecting to JetStream"


[lib]
name = "jetstream_client_example"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.98"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tonic = { version = "0.10", features = [
    "tls",
    "tls-roots",
    "tls-webpki-roots",
] }
prost = "0.12"
prost-types = "0.12"
solana-sdk = "=2.2.1"
bs58 = "0.5.1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
futures = "0.3.24"
jetstream = { path = "./jetstream_protos" }

[build-dependencies]
protobuf-src = "1"
tonic-build = "0.10"
