[package]
name = "jetstream_protos"
version = "0.1.0"
edition = "2021"
description = "JetStream Protocol Buffer Definitions"

[dependencies]
prost = "0.12"
prost-types = "0.12"
tonic = { version = "0.10", features = [
    "tls",
    "tls-roots",
    "tls-webpki-roots",
] }

[build-dependencies]
protobuf-src = "1"
tonic-build = "0.10"
