[package]
name = "jetstream_protos"
version = "0.0.1"
description = "Protos for JetStream client"
edition = "2021"


[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
protobuf-src = { version = "1.1.0" }
tonic-build = { version = "0.12.3" }
anyhow = { workspace = true }
